# nano-pow

./: .clang-format.base  .gitignore  .gitmodules  CMakeLists.txt  ConvertOpenCL.cmake  LICENSE  README.md  cpp_driver.cpp  cpp_driver.hpp  gtest_driver.cpp  main.cpp  opencl_driver.cpp  opencl_driver.hpp
bindings/python/: bindings.py  test_api.py
ci/: clang-format-all.sh
include/OpenCL/: cl.hpp
include/nano_pow/: c_api.h  conversions.hpp  cpp_driver.hpp  driver.hpp  hash.hpp  memory.hpp  opencl.hpp  opencl_driver.hpp  plat.hpp  pow.hpp  tuning.hpp  uint128.hpp  xoroshiro128starstar.hpp
include/plat/unix/: memory.cpp
include/plat/win/: memory.cpp
include/ssp_pow/: driver.hpp  hash.hpp  pow.hpp
src/: c_api.cpp  cpp_driver.cpp  driver.cpp  gtest_driver.cpp  main.cpp  opencl_driver.cpp  opencl_program.cl  opencl_program.cpp  testing.cpp  tuning.cpp
